Introducing ViewHandler and CorsHandler